# tauri-annotate

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ControlPanel.tsx  DetectionList.tsx  FrameControls.tsx  FrameProgressBar.tsx  FrameRateCalculator.tsx  Header.tsx  ManualCorrection.tsx  PersonList.tsx  PlaybackSpeedControl.tsx  SaveRangeControl.tsx  Setting.tsx  VideoDisplay.tsx
